pdf: Add support for Screen annotations containing a rendition action

https://bugzilla.gnome.org/show_bug.cgi?id=573748